--- a/app/src/main/res/layout/item_note_header.xml
+++ b/app/src/main/res/layout/item_note_header.xml
@@ -8,6 +8,7 @@
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
     android:layout_marginTop="16dp"
+    android:textFontWeight="700"
     app:layout_constraintEnd_toEndOf="parent"
     tools:text="TextView"
     android:textSize="24sp"
