--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="backgroundColor">@color/my_white_background</item>
+        .<item name="android:fontFamily">@font/nunito_regular</item>
     </style>
 
     <style name="appTheme" parent="Theme.NotForgotAgain" />
